# fastapi-rag

./: chroma_utils.py  db_utils.py  langchain_utils.py  main.py  pydantic_models.py  pyproject.toml  rag_app.db  requirements.txt
chroma_db/: chroma.sqlite3
streamlit/: api_utils.py  app.py  sidebar.py
